--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
     package="edu.buffalo.cse.cse486586.groupmessenger1"
     android:versionCode="1"
     android:versionName="1.0" >
+    <!--
+    needed permission to access internet and phone state
+    https://developer.android.com/guide/topics/providers/content-provider-creating.html
+    -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:allowBackup="true"
